--- a/pages/destinos.html
+++ b/pages/destinos.html
@@ -12,25 +12,33 @@
 </head>
 <body>
     <header>
-        <nav class="menu">
-            <ul class="nav-underline">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./sobrenosotros.html">SOBRE NOSOTROS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="./destinos.html">DESTINOS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./promociones.html">PROMOCIONES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">CONTACTO</a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav nav-underline ">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../index.html">INICIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/sobrenosotros.html">SOBRE NOSOTROS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../pages/destinos.html">DESTINOS</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/promociones.html">PROMOCIONES</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <div class="container2">
