--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Cottage Turismo</title>
 </head>
 <body>
-    <header>
+  <header>
         <!-- <nav class="menu">
             <ul class="nav-underline">
               <li class="nav-item">
@@ -59,51 +59,51 @@
             </div>
           </div>
         </nav>
-    </header>
+  </header>
 
-    <main>
-        <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                    <img src="./assets/cottage-rio.jpg" class="d-block w-100" alt="Cottage al dorde del río">
-              </div>
-              <div class="carousel-item">
-                    <img src="./assets/cottage.jpg" class="d-block w-100" alt="Cottage cubierto de nieve">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/cottage-mountain.jpg" class="d-block w-100" alt="Cotagge en las montañas">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+  <main>
+    <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/cottage-rio.jpg" class="d-block w-100" alt="Cottage al borde del río">
         </div>
-
-        <h1>¡ELEGÍ LA OPCIÓN QUE MÁS TE GUSTE!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusamus ea recusandae asperiores optio placeat veritatis nihil, possimus voluptatum maxime dolore magni repellendus vel a corrupti laborum? Beatae, nemo ducimus!</p>
-
-        <h2>PRINCIPALES DESTINOS</h2>
-
-        <div class="box-imagen">
-          <img class="casa" src="./assets/edimburgo-escocia.jpg" alt="Edimburgo, Escocia">
-          <img class="casa" src="./assets/irlanda.jpg" alt="Cabaña de madera">
-          <img class="casa" src="./assets/inglaterra.jpg" alt="Cabaña de paja">
-        </div>            
-        <div class="box-texto">
-          <h3 class="">ESCOCIA</h2> 
-          <h3 class="opciones">IRLANDA</h2>
-          <h3 class="opciones2">INGLATERRA</h2> 
+        <div class="carousel-item">
+          <img src="./assets/cottage.jpg" class="d-block w-100" alt="Cottage cubierto de nieve">
         </div>
-    </main>
+        <div class="carousel-item">
+          <img src="./assets/cottage-mountain.jpg" class="d-block w-100" alt="Cotagge en las montañas">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
-    <footer>
-      2023 Mariana Reynoso
-    </footer>
+    <h1>¡ELEGÍ LA OPCIÓN QUE MÁS TE GUSTE!</h1>
+    <p class="parrafo-home">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusamus ea recusandae asperiores optio placeat veritatis nihil, possimus voluptatum maxime dolore magni repellendus vel a corrupti laborum? Beatae, nemo ducimus!</p>
+
+    <h2 class="subtitulo-home">PRINCIPALES DESTINOS</h2>
+
+    <div class="box-imagen">
+      <img class="casa" src="./assets/edimburgo-escocia.jpg" alt="Edimburgo, Escocia">
+      <img class="casa" src="./assets/irlanda.jpg" alt="Cabaña de madera">
+      <img class="casa" src="./assets/inglaterra.jpg" alt="Cabaña de paja">
+    </div>            
+    <div class="box-texto">
+      <h3 class="">ESCOCIA</h2> 
+      <h3 class="opciones">IRLANDA</h2>
+      <h3 class="opciones2">INGLATERRA</h2> 
+    </div>
+  </main>
+
+  <footer>
+    2023 Mariana Reynoso
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
