agregado todo lo basico

--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -45,17 +45,17 @@
         <h1>¡OFERTAS PENSADAS PARA VOS!</h1>
 
         <div class="promociones">
-            <h2>PAQUETES GRUPALES</h2>
+            <h2 class="subtitulo-prom">PAQUETES GRUPALES</h2>
             <img class="casa5" src="../assets/manos.jpg" alt="Manos en tronco">
         </div>
 
         <div class="promociones">
-            <h2>PAQUETES DE INVIERNO</h2>
+            <h2 class="subtitulo-prom">PAQUETES DE INVIERNO</h2>
             <img class="casa5" src="../assets/cabaña-de-invierno.jpg" alt="Cabaña en la nieve">
         </div>
 
         <div class="promociones">
-            <h2>PAQUETES DE VERANO</h2>
+            <h2 class="subtitulo-prom">PAQUETES DE VERANO</h2>
             <img class="casa5" src="../assets/cabaña-en-la-playa.jpg" alt="Cabañas en la playa" >
         </div>
     </main>
