agregado logo, index terminado

--- a/index.html
+++ b/index.html
@@ -1,64 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Cottage Turismo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Cottage Turismo</title>
 </head>
 <body>
   <header>
-        <!-- <nav class="menu">
-            <ul class="nav-underline">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/sobrenosotros.html">SOBRE NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/destinos.html">DESTINOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/promociones.html">PROMOCIONES</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
-              </li>
-            </ul>
-        </nav> -->
-        <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-              <ul class="navbar-nav nav-underline ">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/sobrenosotros.html">SOBRE NOSOTROS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/destinos.html">DESTINOS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/promociones.html">PROMOCIONES</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/logo.png" class="logo" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav nav-underline ">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/sobrenosotros.html">SOBRE NOSOTROS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/destinos.html">DESTINOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/promociones.html">PROMOCIONES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </header>
 
   <main>
@@ -85,19 +68,29 @@
     </div>
 
     <h1>¡ELEGÍ LA OPCIÓN QUE MÁS TE GUSTE!</h1>
-    <p class="parrafo-home">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusamus ea recusandae asperiores optio placeat veritatis nihil, possimus voluptatum maxime dolore magni repellendus vel a corrupti laborum? Beatae, nemo ducimus!</p>
+    <p class="parrafo-home">Podes seleccionar entre nuestros destinos más populares, lo más clásicos o ¡incluso los más exóticos! También podes elegir una de nustras promociones, que por tiempo limitado, ofrecen visitar lugares paradisíacos y joyas poca exploradas.</p>
 
     <h2 class="subtitulo-home">PRINCIPALES DESTINOS</h2>
 
-    <div class="box-imagen">
-      <img class="casa" src="./assets/edimburgo-escocia.jpg" alt="Edimburgo, Escocia">
-      <img class="casa" src="./assets/irlanda.jpg" alt="Cabaña de madera">
-      <img class="casa" src="./assets/inglaterra.jpg" alt="Cabaña de paja">
-    </div>            
-    <div class="box-texto">
-      <h3 class="">ESCOCIA</h2> 
-      <h3 class="opciones">IRLANDA</h2>
-      <h3 class="opciones2">INGLATERRA</h2> 
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/edimburgo-escocia.jpg" class="card-img-top casa" alt="Cabaña en Edimburgo, Escocia">
+      <div class="card-body">
+        <h3 class="card-text">ESCOCIA</h3>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/irlanda.jpg" class="card-img-top casa" alt="Cabaña de madera">
+      <div class="card-body">
+        <h3 class="card-text">IRLANDA</h3>
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/inglaterra.jpg" class="card-img-top casa" alt="Cabaña de paja">
+      <div class="card-body">
+        <h3 class="card-text">INGLATERRA</h3>
+      </div>
     </div>
   </main>
 
