--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -1,70 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Cottage Turismo</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Cottage Turismo</title>
 </head>
 <body>
-    <header>
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav nav-underline ">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">INICIO</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/sobrenosotros.html">SOBRE NOSOTROS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/destinos.html">DESTINOS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/promociones.html">PROMOCIONES</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
-              </li>
-            </ul>
-          </div>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/logo.png" class="logo" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav nav-underline ">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">INICIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/sobrenosotros.html">SOBRE NOSOTROS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/destinos.html">DESTINOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../pages/promociones.html">PROMOCIONES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 
-    <main>
-        <h1>¡OFERTAS PENSADAS PARA VOS!</h1>
+  <main>
+    <h1>¡OFERTAS PENSADAS PARA VOS!</h1>
 
-        <div class="promociones">
-            <h2 class="subtitulo-prom">PAQUETES GRUPALES</h2>
-            <img class="casa5" src="../assets/manos.jpg" alt="Manos en tronco">
-        </div>
+    <div class="promociones">
+      <h2 class="subtitulo-prom">PAQUETES GRUPALES</h2>
+      <img class="casa5" src="../assets/manos.jpg" alt="Manos en tronco">
+    </div>
 
-        <div class="promociones">
-            <h2 class="subtitulo-prom">PAQUETES DE INVIERNO</h2>
-            <img class="casa5" src="../assets/cabaña-de-invierno.jpg" alt="Cabaña en la nieve">
-        </div>
+    <div class="promociones">
+      <h2 class="subtitulo-prom">PAQUETES DE INVIERNO</h2>
+      <img class="casa5" src="../assets/cabaña-de-invierno.jpg" alt="Cabaña en la nieve">
+    </div>
 
-        <div class="promociones">
-            <h2 class="subtitulo-prom">PAQUETES DE VERANO</h2>
-            <img class="casa5" src="../assets/cabaña-en-la-playa.jpg" alt="Cabañas en la playa" >
-        </div>
-    </main>
+    <div class="promociones">
+      <h2 class="subtitulo-prom">PAQUETES DE VERANO</h2>
+      <img class="casa5" src="../assets/cabaña-en-la-playa.jpg" alt="Cabañas en la playa" >
+    </div>
+  </main>
 
-    <footer>
-      2023 Mariana Reynoso
-    </footer>
+  <footer>
+    2023 Mariana Reynoso
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     
 </body>
 </html>
