Agregados detalles scss

--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -46,19 +46,30 @@
   <main>
     <h1>¡OFERTAS PENSADAS PARA VOS!</h1>
 
-    <div class="promociones">
-      <h2 class="subtitulo-prom">PAQUETES GRUPALES</h2>
-      <img class="casa5" src="../assets/manos.jpg" alt="Manos en tronco">
+    <p>¡Te ofrecemos los mejores paquetes con actividades ya pensadas para vos! Especiales para aquellas personas que les gusta la tranquilidad pero no pueden quedarse quietas</p>
+
+    <div class="card text-bg-dark">
+      <img src="../assets/manos.jpg" class="card-img" alt="Manos en tronco">
+      <div class="card-img-overlay">
+        <h5 class="card-title text-md-start">PAQUETES GRUPALES</h5>
+        <p class="card-text text-md-start">Las mejores opciones para viajar con tus amigos</p>
+      </div>
     </div>
 
-    <div class="promociones">
-      <h2 class="subtitulo-prom">PAQUETES DE INVIERNO</h2>
-      <img class="casa5" src="../assets/cabaña-de-invierno.jpg" alt="Cabaña en la nieve">
+    <div class="card text-bg-dark">
+      <img src="../assets/cabaña-de-invierno.jpg" class="card-img" alt="Cabñas de invierno">
+      <div class="card-img-overlay">
+        <h5 class="card-title text-md-start">PAQUETES DE INVIERNO</h5>
+        <p class="card-text text-md-start">Las mejores cabañas para disfrutar de la nieve</p>
+      </div>
     </div>
 
-    <div class="promociones">
-      <h2 class="subtitulo-prom">PAQUETES DE VERANO</h2>
-      <img class="casa5" src="../assets/cabaña-en-la-playa.jpg" alt="Cabañas en la playa" >
+    <div class="card text-bg-dark">
+      <img src="../assets/cabaña-en-la-playa.jpg" class="card-img" alt="Cabañas en la playa">
+      <div class="card-img-overlay">
+        <h5 class="card-title text-md-start">PAQUETES DE VERANO</h5>
+        <p class="card-text text-md-start">Las mejores cabañas en playas paradisíacas</p>
+      </div>
     </div>
   </main>
 
