media queries terminadas

--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -46,7 +46,7 @@
   <main>
     <h1>¡OFERTAS PENSADAS PARA VOS!</h1>
 
-    <p>¡Te ofrecemos los mejores paquetes con actividades ya pensadas para vos! Especiales para aquellas personas que les gusta la tranquilidad pero no pueden quedarse quietas</p>
+    <p class="promo">¡Te ofrecemos los mejores paquetes con actividades ya pensadas para vos! Especiales para aquellas personas que les gusta la tranquilidad pero no pueden quedarse quietas</p>
 
     <div class="card text-bg-dark">
       <img src="../assets/manos.jpg" class="card-img" alt="Manos en tronco">
