correcciones para ultima entrega

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="../index.html">
           <img src="../assets/logo.png" class="logo" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,9 +22,6 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav nav-underline ">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">INICIO</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="../pages/sobrenosotros.html">SOBRE NOSOTROS</a>
             </li>
@@ -68,31 +65,32 @@
         </div>
            
         <div>
+          <label class="label-boton" for="button">Enviar</label>
           <input class="boton" type="submit">
         </div>            
       </fieldset>
     </form>
 
-    <h3>TAMBIÉN PODES SEGUIRNOS EN NUESTRAS REDES SOCIALES</h3>
+    <h2 class="titulo-cto">TAMBIÉN PODES SEGUIRNOS EN NUESTRAS REDES SOCIALES</h2>
 
     <div class="contacto">
       <a href="https://www.instagram.com/">
-        <img class= "iconos" src="../assets/iconos/instagram.png" alt="">
+        <img class= "iconos" src="../assets/iconos/instagram.png" alt="Icono de Instagram">
         Instagram
       </a>
       <a href="https://twitter.com/?lang=es">
-        <img class="iconos" src="../assets/iconos/twitter.png" alt="">
+        <img class="iconos" src="../assets/iconos/twitter.png" alt="Icono de Twitter">
         Twitter
       </a>
       <a href="https://www.facebook.com">
-        <img class="iconos" src="../assets/iconos/facebook.png" alt="">
+        <img class="iconos" src="../assets/iconos/facebook.png" alt="Icono de Facebook">
         Facebook
       </a>
     </div>      
   </main>
 
   <footer>
-    023 Mariana Reynoso
+    2023 Mariana Reynoso
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
