--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="./index.html">
           <img src="./assets/logo.png" class="logo" alt="Logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,9 +23,6 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav nav-underline ">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">INICIO</a>
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/sobrenosotros.html">SOBRE NOSOTROS</a>
             </li>
@@ -72,26 +69,28 @@
 
     <h2 class="subtitulo-home">PRINCIPALES DESTINOS</h2>
 
-    <div class="card" style="width: 18rem;">
-      <img src="./assets/edimburgo-escocia.jpg" class="card-img-top casa" alt="Cabaña en Edimburgo, Escocia">
-      <div class="card-body">
-        <h3 class="card-text">ESCOCIA</h3>
+    <section class="box-imagen">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/edimburgo-escocia.jpg" class="card-img-top casa" alt="Cabaña en Edimburgo, Escocia">
+        <div class="card-body">
+          <h3 class="card-text">ESCOCIA</h3>
+        </div>
       </div>
-    </div>
 
-    <div class="card" style="width: 18rem;">
-      <img src="./assets/irlanda.jpg" class="card-img-top casa" alt="Cabaña de madera">
-      <div class="card-body">
-        <h3 class="card-text">IRLANDA</h3>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/irlanda.jpg" class="card-img-top casa" alt="Cabaña de madera">
+        <div class="card-body">
+          <h3 class="card-text">IRLANDA</h3>
+        </div>
       </div>
-    </div>
 
-    <div class="card" style="width: 18rem;">
-      <img src="./assets/inglaterra.jpg" class="card-img-top casa" alt="Cabaña de paja">
-      <div class="card-body">
-        <h3 class="card-text">INGLATERRA</h3>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/inglaterra.jpg" class="card-img-top casa" alt="Cabaña de paja">
+        <div class="card-body">
+          <h3 class="card-text">INGLATERRA</h3>
+        </div>
       </div>
-    </div>
+    </section>
   </main>
 
   <footer>
